Smirnova_new_commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">Обо мне</a>
                 <a href="#qualification" class="nav-item nav-link">Опыт</a>
-                <a href="#skill" class="nav-item nav-link">Скиллы</a>
+                <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Soft Skills</a>
                 <a href="#contact" class="nav-item nav-link">Связаться</a>
             </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Middle QA Engineer</h3>
-                    <p>Инженер по ручному тестированию с опытом работы более 2 лет, запускала как web-сервисы, так и мобильные приложения. Больше года работаю с составлением тестовых артефактов высоких уровней (тест-планы, чек-личты, отчёты по тестированию) и общей документацией по проекту, имею опыт работы на позиции аналитика, project-менеджера и тимлида.</p>
+                    <p>Инженер по ручному тестированию с опытом работы более 2 лет, запускала как web-сервисы, так и мобильные приложения. Больше года работаю с составлением тестовых артефактов высоких уровней (тест-планы, чек-личты, отчёты по тестированию) и общей документацией по проекту, имею опыт работы на позиции аналитика, project-менеджера и teamlead.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Имя: <span class="text-secondary">Смирнова Екатерина</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Дата рождения: <span class="text-secondary">2 октября 1989</span></h6></div>
